[package]
name = "timy"
version = "0.1.0"
edition = "2018"

[lib]
name = "timy"
path = "src/lib.rs"

[[bin]]
name = "timy"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
clap = "3.0.0-beta.2"